# AIO_SS_USB_TEST_AGENT

./: .env.example  .gitignore  BUILD.md  TESTING_GUIDE.md  __init__.py  config.yaml  main.py  pyproject.toml  requirements.txt  run_agent.py
config/: __init__.py  constants.py  settings.py
controller/: __init__.py  control_wrapper.py  controller.py  window_manager.py
core/: __init__.py  container.py  exceptions.py  memory.py  protocols.py
domain/: __init__.py  state_machine.py
domain/enums/: __init__.py
domain/models/: __init__.py  test_config.py  test_result.py  test_state.py
infrastructure/: __init__.py  clock.py  drive_scanner.py  process_manager.py  state_store.py  window_finder.py
interface/: __init__.py
interface/websocket/: __init__.py  client.py
services/: __init__.py  batch_executor.py  memory_monitor.py  mfc_ui_monitor.py  process_monitor.py  state_monitor.py  test_executor.py  worker_pool.py
tests/: conftest.py
tests/manual/: __init__.py  test_mfc_ui_parsing.py
tests/unit/: test_agent.py  test_mfc_parsing.py
tests/unit/config/: test_settings.py
tests/unit/controller/: __init__.py  test_control_wrapper.py  test_window_manager.py
tests/unit/core/: test_container.py  test_exceptions.py  test_memory.py
tests/unit/domain/: __init__.py  test_state_machine.py  test_test_config.py  test_test_state.py
tests/unit/infrastructure/: test_clock.py  test_drive_scanner.py  test_state_store.py
tests/unit/interface/: __init__.py  test_websocket_client.py
tests/unit/services/: test_batch_executor.py  test_memory_monitor.py  test_mfc_ui_monitor.py  test_process_monitor.py  test_state_monitor.py  test_test_executor.py  test_worker_pool.py
utils/: __init__.py  enum_converter.py  logging.py
