[project]
name = "ss-usb-test-agent"
version = "0.1.0"
description = "USB Test Automation Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pywinauto>=0.6.8",
    "pywin32>=306",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # Logging - uses standard logging for Backend compatibility
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
build = [
    "pyinstaller>=6.0.0",
    # "nuitka>=2.0",  # 향후 코드 보호 필요시 활성화
]

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pywinauto.*",
    "win32gui",
    "win32con",
    "win32process",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
python_files = "test_*.py"
python_functions = "test_*"
# Exclude classes that are not test classes (e.g., TestCapacity, TestPhase enums/dataclasses)
python_classes = ["Test", "!Test*Enum", "!Test*Config", "!Test*State", "!Test*Result", "!Test*Request", "!Test*Phase", "!Test*Capacity", "!Test*File", "!Test*Method", "!Test*Preset"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
